--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(papaja)
 library(viridis)
+library(brms)
 ```
 
 ```{r read data}
@@ -40,7 +41,7 @@ acc_df <- tidy_df |>
 dropped_participants <- acc_df |>
   dplyr::filter(participant_acc_z <= -1.5) |>
   dplyr::select(participant_id) |>
-  as_vector()
+  purrr::as_vector()
 
 tidy_df <- tidy_df |>
   dplyr::group_by(participant_id) |>
@@ -79,7 +80,7 @@ ce_rt_plot <- ce_rt_data |>
   aes(x = factor(congruency, levels = c("congruent", "incongruent")), y = rt, fill = factor(congruency, levels = c("congruent", "incongruent"))) +
   scale_x_discrete(labels = c("Congruent", "Incongruent")) +
   scale_fill_discrete(labels = c("Conguent", "Incongruent"), type = rocket(n = 2, alpha = 1, begin = 0, end = 1)) +
-  geom_violin(trim = TRUE, bounds = c(0, Inf)) +
+  geom_violin(trim = TRUE, bounds = c(0, Inf), width = 0.5) +
   geom_boxplot(width = .1, colour = c("white", "black"), outlier.shape = NA) +
   labs(x = "Congruency",
        y = "Reaction time (ms)",
@@ -187,5 +188,48 @@ cse_rt_plot_cond <- cse_rt_data_cond |>
 
 ggsave("plots/cse_rt_plot_cond.png", plot = cse_rt_plot_cond, width = 16, height = 9, units = "cm", dpi = 320)
 print(cse_rt_plot_cond)
+```
+
+```{r training data}
+train_df <- tidy_df |>
+  dplyr::select(participant_id, rt, congruency, condition, arousal_mean_rating, valence_mean_rating, finger, reversed_color_axes, reversed_correct_responses, prev_congruency, time_elapsed) |>
+  dplyr::mutate(
+    condition_negative = ifelse(condition == 'negative', 1, 0),
+    condition_positive = ifelse(condition == 'positive', 1, 0),
+    condition_neutral = ifelse(condition == 'neutral', 1, 0)
+    ) |>
+  dplyr::select(-condition)
+```
+
+```{r null model}
+model_dir <- "models"
+h0_priors <- c(
+  set_prior("normal(0, 15)", class = "b", coef = congruency),
+  set_prior("normal(0, 15)", class = "b", coef = prev_congruency),
+  set_prior("student_t(3, 0, 10)", class = "sd"),
+  set_prior("lkj(2)", class = "cor")
+)
+
+h0_formula <- bf(rt ~ congruency * prev_congruency + (1 + congruency + prev_congruency | participant_id))
+
+null_fit <- brm(formula = h0_formula, data = train_df, prior = h0_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "null_model.stan"), file = file.path(model_dir, "null"))
+```
+
+
+```{r specifying models to test h1}
+h1_priors <- c(
+  set_prior("normal(0, 15)", class = "b", coef = congruency),
+  set_prior("normal(0, 15)", class = "b", coef = prev_congruency),
+  set_prior("normal(0, 15)", class = "b", coef = condition_positive, hb = 0),
+  set_prior("normal(0, 15)", class = "b", coef = condition_negative, lb = 0),
+  set_prior("normal(0, 15)", class = "b", coef = condition_neutral),
+  set_prior("student_t(3, 0, 10)", class = "sd"),
+  set_prior("lkj(2)", class = "cor")
+)
+
+h1_formula <- bf(rt ~ congruency * prev_congruency * 
+              (condition_positive + condition_negative + condition_neutral) + 
+              (1 + congruency | participant_id))
+h1_fit <- brm(formula = h1_formula, data = train_df, prior = h1_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h1_model.stan"), file = file.path(model_dir, "h1"))
 ```
 
