--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -204,8 +204,8 @@ train_df <- tidy_df |>
 ```{r null model}
 model_dir <- "models"
 h0_priors <- c(
-  set_prior("normal(0, 15)", class = "b", coef = congruency),
-  set_prior("normal(0, 15)", class = "b", coef = prev_congruency),
+  set_prior("normal(0, 30)", class = "b", coef = "congruencyincongruent"),
+  set_prior("normal(0, 15)", class = "b", coef = "prev_congruencyincongruent"),
   set_prior("student_t(3, 0, 10)", class = "sd"),
   set_prior("lkj(2)", class = "cor")
 )
@@ -218,13 +218,13 @@ null_fit <- brm(formula = h0_formula, data = train_df, prior = h0_priors, seed =
 
 ```{r specifying models to test h1}
 h1_priors <- c(
-  set_prior("normal(0, 15)", class = "b", coef = congruency),
-  set_prior("normal(0, 15)", class = "b", coef = prev_congruency),
-  set_prior("normal(0, 15)", class = "b", coef = condition_positive, hb = 0),
-  set_prior("normal(0, 15)", class = "b", coef = condition_negative, lb = 0),
-  set_prior("normal(0, 15)", class = "b", coef = condition_neutral),
-  set_prior("student_t(3, 0, 10)", class = "sd"),
-  set_prior("lkj(2)", class = "cor")
+  set_prior("normal(0, 30)", class = "b", coef = "congruencyincongruent"),
+  set_prior("normal(0, 15)", class = "b", coef = "prev_congruencyincongruent"),
+  set_prior("normal(0, 5)", class = "b", coef = condition_positive, hb = 0),
+  set_prior("normal(0, 5)", class = "b", coef = condition_negative, lb = 0),
+  set_prior("normal(0, 5)", class = "b", coef = condition_neutral),
+  set_prior("student_t(5, 0, 10)", class = "sd"),
+  set_prior("lkj(1.5)", class = "cor")
 )
 
 h1_formula <- bf(rt ~ congruency * prev_congruency * 
