--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -14,7 +14,125 @@ library(tidyverse)
 library(papaja)
 library(viridis)
 library(brms)
+library(lme4)
+library(lmerTest)
 ```
+```{r Dienes Bayes Factor 2019, author: Bence Palfi; to estimate bayesfactors based on a theoretical sd and model estimate}
+BF <- function(sd, obtained, dfdata = 1, likelihood = c("normal", "t"), modeloftheory= c("normal","t","cauchy", "uniform") ,lower =0, upper=1, modeoftheory = 0, scaleoftheory = 1, dftheory = 1, tail = 2) {
+
+if(likelihood=="normal"){
+
+dfdata=10^10
+
+}
+
+if(modeloftheory=="normal"){
+
+dftheory = 10^10
+
+} else if(modeloftheory=="cauchy"){
+
+dftheory = 1
+
+}
+
+area <- 0
+
+normarea <- 0
+
+if(modeloftheory=="uniform"){
+
+theta <- lower
+
+range <- upper - lower
+
+incr <- range / 2000
+
+for (A in -1000:1000){
+
+theta <- theta + incr
+
+dist_theta <- 1 / range
+
+height <- dist_theta * dt((obtained-theta)/sd, df=dfdata)
+
+area <- area + height * incr
+
+}
+
+LikelihoodTheory <- area
+
+}else{
+
+theta <- modeoftheory - 8 * scaleoftheory
+
+incr <- scaleoftheory/200
+
+for (A in -1600:1600){
+
+theta <- theta + incr
+
+dist_theta <- dt((theta-modeoftheory)/scaleoftheory, df=dftheory)
+
+if(identical(tail, 1)){
+
+if (theta <= modeoftheory){
+
+dist_theta <- 0
+
+} else {
+
+dist_theta <- dist_theta * 2
+
+}
+
+}
+
+height <- dist_theta * dt((obtained-theta)/sd, df = dfdata)
+
+area <- area + height * incr
+
+normarea <- normarea + dist_theta*incr
+
+}
+
+LikelihoodTheory <- area/normarea
+
+}
+
+Likelihoodnull <- dt(obtained/sd, df = dfdata)
+
+BayesFactor <- LikelihoodTheory/Likelihoodnull
+
+BayesFactor
+
+}
+
+BF_range <- function(sd, obtained, dfdata = 1, likelihood = c("normal", "t"),
+modeloftheory= c("normal","t","cauchy") , meanoftheory = 0,
+modeoftheory = 0, sdtheoryrange, dftheory = 1, tail = 1) {
+x = c(0)
+y = c(0)
+# loop through all the values in given range and compute the BF
+for(sdi in sdtheoryrange)
+{
+B = as.numeric(BF(sd = sd, obtained = obtained, dfdata = dfdata,
+likelihood = likelihood,
+modeloftheory = modeloftheory,
+modeoftheory=modeoftheory,
+scaleoftheory=sdi,
+dftheory = dftheory, tail = tail))
+if (sdi ==0 ) {B=1} # calculator returns NaN when sdtheory=0; change that return BF=1
+x= append(x,sdi)
+y= append(y,B)
+output = cbind(x,y)
+}
+output = output[-1,]
+colnames(output) = c("sdtheory", "BF")
+return(output)
+}
+```
+
 
 ```{r read data}
 tidy_df <- readr::read_csv("data/test_stream.csv")
@@ -200,36 +318,269 @@ train_df <- tidy_df |>
     ) |>
   dplyr::select(-condition)
 ```
+# BASE MODELS & Dienes BFs based on point estimates
+```{r freq ce model Dienes BF}
+freq_ce_model <- lmer(rt ~ congruency  + (1 + congruency | participant_id), data = train_df)
 
-```{r null model}
+ce_summary <- summary(freq_ce_model)
+ce_summary_coefs <- coef(ce_summary)
+ce_scale <- 50 # previously measured ce estimates
+ce_mean_effect <- ce_summary_coefs["congruencyincongruent", "Estimate"]
+ce_se_effect <- ce_summary_coefs["congruencyincongruent", "Std. Error"]
+
+ce_BF <- BF(sd = ce_se_effect, obtained = ce_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = ce_scale, tail = 1)
+ce_range <- seq(from= 0,to=ce_scale * ce_summary_coefs["(Intercept)", "Estimate"],by=0.01)
+ce_range_test <- BF_range(sd = ce_se_effect, obtained = ce_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = ce_range, tail = 1)
+
+ev_for_ce <- subset(data.frame(ce_range_test), BF > 3)
+low_ce_threshold <- min(ev_for_ce$sdtheory)
+high_ce_threshold <- max(ev_for_ce$sdtheory)
+print(low_ce_threshold, high_ce_threshold, ce_BF)
+
+```
+
+```{r cse freq linear model Dienes BF}
+freq_cse_model <- lmer(rt ~ congruency * prev_congruency + (1 + congruency + prev_congruency | participant_id), data = train_df)
+
+cse_summary <- summary(freq_cse_model)
+cse_summary_coefs <- coef(cse_summary)
+cse_scale <- 25 # previously measured cse estimates
+cse_mean_effect <- cse_summary_coefs["congruencyincongruent:prev_congruencyincongruent", "Estimate"]
+cse_se_effect <- cse_summary_coefs["congruencyincongruent:prev_congruencyincongruent", "Std. Error"]
+
+cse_BF <- BF(sd = cse_se_effect, obtained = - cse_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_scale, tail = 1)
+cse_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent", "Estimate"],by=0.01)
+cse_range_test <- BF_range(sd = cse_se_effect, obtained = - cse_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_range, tail = 1)
+
+ev_for_cse <- subset(data.frame(cse_range_test), BF > 3)
+low_cse_threshold <- min(ev_for_cse$sdtheory)
+high_cse_threshold <- max(ev_for_cse$sdtheory)
+print(low_cse_threshold, high_cse_threshold, cse_BF)
+```
+
+```{r freq_cse_conditions_model Dienes BF}
+freq_cse_conditions_model <- lmer(rt ~ congruency * prev_congruency * (condition_negative + condition_positive + condition_neutral) + (1 + congruency + prev_congruency | participant_id), data = train_df)
+
+cse_conditions_summary <- summary(freq_cse_conditions_model)
+cse_conditions_summary_coefs <- coef(cse_conditions_summary)
+cse_conditions_scale <- 5 # arbitrary
+
+cse_conditions_mean_effect_negative <- cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_negative", "Estimate"]
+cse_conditions_mean_effect_positive <- cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_positive", "Estimate"]
+cse_conditions_mean_effect_neutral <- cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_neutral", "Estimate"]
+
+cse_conditions_se_effect_negative <- cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_negative", "Std. Error"]
+cse_conditions_se_effect_positive <- cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_positive", "Std. Error"]
+cse_conditions_se_effect_neutral <- cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_neutral", "Std. Error"]
+
+cse_BF_negative <- BF(sd = cse_conditions_se_effect_negative, obtained = cse_conditions_mean_effect_negative, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_conditions_scale, tail = 1)
+cse_BF_positive <- BF(sd = cse_conditions_se_effect_positive, obtained = cse_conditions_mean_effect_positive, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_conditions_scale, tail = 1)
+cse_BF_neutral <- BF(sd = cse_conditions_se_effect_neutral, obtained = cse_conditions_mean_effect_neutral, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_conditions_scale, tail = 2)
+
+cse_conditions_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent:prev_congruencyincongruent", "Estimate"],by=0.01)
+
+cse_conditions_range_test_negative <- BF_range(sd = cse_conditions_se_effect_negative, obtained =  cse_conditions_mean_effect_negative, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_conditions_range, tail = 1)
+cse_conditions_range_test_positive <- BF_range(sd = cse_conditions_se_effect_positive, obtained =  cse_conditions_mean_effect_positive, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_conditions_range, tail = 1)
+cse_conditions_range_test_neutral <- BF_range(sd = cse_conditions_se_effect_neutral, obtained =  cse_conditions_mean_effect_neutral, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_conditions_range, tail = 2)
+
+ev_for_cse_conditions_negative <- subset(data.frame(cse_conditions_range_test_negative), BF > 3)
+low_cse_conditions_threshold_negative <- min(ev_for_cse_conditions_negative$sdtheory)
+high_cse_conditions_threshold_negative <- max(ev_for_cse_conditions_negative$sdtheory)
+print(low_cse_conditions_threshold_negative, high_cse_conditions_threshold_negative, cse_BF_negative)
+
+ev_for_cse_conditions_positive <- subset(data.frame(cse_conditions_range_test_positive), BF > 3)
+low_cse_conditions_threshold_positive <- min(ev_for_cse_conditions_positive$sdtheory)
+high_cse_conditions_threshold_positive <- max(ev_for_cse_conditions_positive$sdtheory)
+print(low_cse_conditions_threshold_positive, high_cse_conditions_threshold_positive, cse_BF_positive)
+
+ev_for_cse_conditions_neutral <- subset(data.frame(cse_conditions_range_test_neutral), BF > 3)
+low_cse_conditions_threshold_neutral <- min(ev_for_cse_conditions_neutral$sdtheory)
+high_cse_conditions_threshold_neutral <- max(ev_for_cse_conditions_neutral$sdtheory)
+print(low_cse_conditions_threshold_neutral, high_cse_conditions_threshold_neutral, cse_BF_neutral)
+```
+
+```{r freq_cse_conditions_time_elapsed_model Dienes BF}
+freq_cse_conditions_time_elapsed_model <- lmer(rt ~ congruency * prev_congruency * (condition_negative + condition_positive + condition_neutral) + (time_elapsed * condition_positive) + (time_elapsed * condition_negative) + (1 + congruency + prev_congruency | participant_id), data = train_df)
+
+cse_conditions_time_elapsed_summary <- summary(freq_cse_conditions_time_elapsed_model)
+cse_conditions_time_elapsed_summary_coefs <- coef(cse_conditions_time_elapsed_summary)
+cse_conditions_time_elapsed_scale <- 2 # arbitrary
+
+cse_conditions_time_elapsed_mean_effect_negative <- cse_conditions_time_elapsed_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_negative:time_elapsed", "Estimate"]
+cse_conditions_time_elapsed_mean_effect_positive <- cse_conditions_time_elapsed_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_positive:time_elapsed", "Estimate"]
+
+cse_conditions_time_elapsed_se_effect_negative <- cse_conditions_time_elapsed_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_negative:time_elapsed", "Std. Error"]
+cse_conditions_time_elapsed_se_effect_positive <- cse_conditions_time_elapsed_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_positive:time_elapsed", "Std. Error"]
+
+cse_BF_negative_time_elapsed <- BF(sd = cse_conditions_time_elapsed_se_effect_negative, obtained = cse_conditions_time_elapsed_mean_effect_negative, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_conditions_time_elapsed_scale, tail = 1)
+cse_BF_positive_time_elapsed <- BF(sd = cse_conditions_time_elapsed_se_effect_positive, obtained = cse_conditions_time_elapsed_mean_effect_positive, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_condition_time_elapsed_scale, tail = 1)
+
+cse_conditions_time_elapsed_range_negative <- seq(from= 0,to=cse_conditions_scale * cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_negative", "Estimate"],by=0.01)
+cse_conditions_time_elapsed_range_positive <- seq(from= 0,to=cse_conditions_scale * cse_conditions_summary_coefs["congruencyincongruent:prev_congruencyincongruent:condition_positive", "Estimate"],by=0.01)
+
+
+cse_conditions_time_elapsed_range_test_negative <- BF_range(sd = cse_conditions_time_elapsed_se_effect_negative, obtained =  cse_conditions_time_elapsed_mean_effect_negative, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_conditions_time_elapsed_range_negative, tail = 1)
+cse_conditions_time_elapsed_range_test_positive <- BF_range(sd = cse_conditions_time_elapsed_se_effect_positive, obtained =  cse_conditions_time_elapsed_mean_effect_positive, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_conditions_time_elapsed_range_positive, tail = 1)
+
+ev_for_cse_conditions_time_elapsed_negative <- subset(data.frame(cse_conditions_time_elapsed_range_test_negative), BF > 3)
+low_cse_conditions_time_elapsed_threshold_negative <- min(ev_for_cse_conditions_time_elapsed_negative$sdtheory)
+high_cse_conditions_time_elapsed_threshold_negative <- max(ev_for_cse_conditions_time_elapsed_negative$sdtheory)
+print(low_cse_conditions_time_elapsed_threshold_negative, high_cse_conditions_time_elapsed_threshold_negative, cse_BF_negative_time_elapsed)
+
+ev_for_cse_conditions_time_elapsed_positive <- subset(data.frame(cse_conditions_time_elapsed_range_test_positive), BF > 3)
+low_cse_conditions_time_elapsed_threshold_positive <- min(ev_for_cse_conditions_time_elapsed_positive$sdtheory)
+high_cse_conditions_time_elapsed_threshold_positive <- max(ev_for_cse_conditions_time_elapsed_positive$sdtheory)
+print(low_cse_conditions_time_elapsed_threshold_positive, high_cse_conditions_time_elapsed_threshold_positive, cse_BF_positive_time_elapsed)
+```
+
+```{r freq_cse_motoric_model Dienes BF}
+freq_cse_motoric_model <- lmer(rt ~ congruency * prev_congruency +
+                      congruency * prev_congruency * reversed_color_axes +
+                      congruency * prev_congruency * reversed_correct_responses +
+                      congruency * prev_congruency * finger +
+                      (1 + congruency + prev_congruency | participant_id), data = train_df)
+
+cse_reversed_color_axes_summary <- summary(freq_cse_motoric_model)
+cse_reversed_color_axes_summary_coefs <- coef(cse_reversed_color_axes_summary)
+cse_reversed_color_axes_scale <- 5 # arbitrary
+cse_reversed_color_axes_mean_effect <- cse_reversed_color_axes_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_color_axes", "Estimate"]
+cse_reversed_color_axes_se_effect <- cse_reversed_color_axes_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_color_axes", "Std. Error"]
+
+cse_reversed_correct_responses_summary <- summary(freq_cse_motoric_model)
+cse_reversed_correct_responses_summary_coefs <- coef(cse_reversed_correct_responses_summary)
+cse_reversed_correct_responses_scale <- 5 # arbitrary
+cse_reversed_correct_responses_mean_effect <- cse_reversed_correct_responses_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_correct_responses", "Estimate"]
+cse_reversed_correct_responses_se_effect <- cse_reversed_correct_responses_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_correct_responses", "Std. Error"]
+
+cse_finger_summary <- summary(freq_cse_motoric_model)
+cse_fingersummary_coefs <- coef(cse_finger_summary)
+cse_finger_scale <- 5 # arbitrary
+cse_finger_mean_effect <- cse_finger_coefs["congruencyincongruent:prev_congruencyincongruent:finger", "Estimate"]
+cse_finger_se_effect <- cse_finger_summary_coefs["congruencyincongruent:prev_congruencyincongruent:finger", "Std. Error"]
+
+
+cse_reversed_color_axes_BF <- BF(sd = cse_reversed_color_axes_se_effect, obtained = - cse_reversed_color_axes_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_reversed_color_axes_scale, tail = 2)
+
+cse_reversed_color_axes_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent", "Estimate"],by=0.01)
+cse_reversed_color_axes_range_test <- BF_range(sd = cse_reversed_color_axes_se_effect, obtained = - cse_reversed_color_axes_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_reversed_color_axes_range, tail = 2)
+
+cse_reversed_correct_responses_BF <- BF(sd = cse_reversed_correct_responses_se_effect, obtained = - cse_reversed_correct_responses_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_reversed_correct_responses_scale, tail = 2)
+
+cse_reversed_correct_responses_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent", "Estimate"],by=0.01)
+cse_reversed_correct_responses_test <- BF_range(sd = cse_reversed_correct_responses_se_effect, obtained = - cse_reversed_correct_responses_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_reversed_correct_responses_range, tail = 2)
+
+cse_finger_BF <- BF(sd = cse_finger_se_effect, obtained = - cse_finger_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_finger_scale, tail = 2)
+
+cse_finger_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent", "Estimate"],by=0.01)
+cse_finger_test <- BF_range(sd = cse_finger_se_effect, obtained = - cse_finger_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_finger_range, tail = 2)
+
+ev_for_cse_reversed_color_axes <- subset(data.frame(cse_reversed_color_axes_range_test), BF > 3)
+low_cse_reversed_color_axes_threshold <- min(ev_for_cse_reversed_color_axes$sdtheory)
+high_cse_reversed_color_axes_threshold <- max(ev_for_cse_reversed_color_axes$sdtheory)
+print(low_cse_reversed_color_axes_threshold, high_cse_reversed_color_axes_threshold, cse_reversed_color_axes_BF)
+
+ev_for_cse_reversed_correct_responses <- subset(data.frame(cse_reversed_correct_responses_range_test), BF > 3)
+low_cse_reversed_correct_responses_threshold <- min(ev_for_cse_reversed_correct_responses$sdtheory)
+high_cse_reversed_correct_responses_threshold <- max(ev_for_cse_reversed_correct_responses$sdtheory)
+print(low_cse_reversed_correct_responses_threshold, high_cse_reversed_correct_responses_threshold, cse_reversed_correct_responses_BF)
+
+ev_for_cse_finger <- subset(data.frame(cse_finger_range_test), BF > 3)
+low_cse_finger_threshold <- min(ev_for_cse_finger$sdtheory)
+high_cse_finger_threshold <- max(ev_for_cse_finger$sdtheory)
+print(low_cse_finger_threshold, high_cse_finger_threshold, cse_finger_BF)
+```
+
+# BAYESIAN MODELS
+
+```{r ce congruency model}
 model_dir <- "models"
-h0_priors <- c(
+h_ce_priors <- c(
+  set_prior("normal(0, 60)", class = "b", coef = "congruencyincongruent"),
+  set_prior("student_t(3, 0, 10)", class = "sd"),
+  set_prior("lkj(2)", class = "cor")
+)
+
+h_ce_formula <- bf(rt ~ congruency + (1 + congruency | participant_id))
+
+ce_fit <- brm(formula = h_ce_formula, data = train_df, prior = h_ce_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h_ce.stan"), file = file.path(model_dir, "h_ce"), init = 0, iter = 10000, warmup = 2000, cores =  16, file_refit = "on_change")
+```
+
+```{r cse model}
+h_cse_priors <- c(
   set_prior("normal(0, 30)", class = "b", coef = "congruencyincongruent"),
   set_prior("normal(0, 15)", class = "b", coef = "prev_congruencyincongruent"),
   set_prior("student_t(3, 0, 10)", class = "sd"),
   set_prior("lkj(2)", class = "cor")
 )
 
-h0_formula <- bf(rt ~ congruency * prev_congruency + (1 + congruency + prev_congruency | participant_id))
+h_cse_formula <- bf(rt ~ congruency * prev_congruency + (1 + congruency + prev_congruency | participant_id))
 
-null_fit <- brm(formula = h0_formula, data = train_df, prior = h0_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "null_model.stan"), file = file.path(model_dir, "null"))
+h_cse_fit <- brm(formula = h_cse_formula, data = train_df, prior = h_cse_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h_cse_model.stan"), file = file.path(model_dir, "h_cse"), init = 0, iter = 10000, warmup = 2000, cores =  16, file_refit = "on_change")
 ```
 
 
-```{r specifying models to test h1}
-h1_priors <- c(
-  set_prior("normal(0, 30)", class = "b", coef = "congruencyincongruent"),
-  set_prior("normal(0, 15)", class = "b", coef = "prev_congruencyincongruent"),
-  set_prior("normal(0, 5)", class = "b", coef = condition_positive, hb = 0),
-  set_prior("normal(0, 5)", class = "b", coef = condition_negative, lb = 0),
-  set_prior("normal(0, 5)", class = "b", coef = condition_neutral),
+```{r specifying models to test conditions}
+h_cse_conditions_priors <- c(
+  set_prior("normal(0, 60)", class = "b", coef = "congruencyincongruent"),
+  set_prior("normal(0, 30)", class = "b", coef = "prev_congruencyincongruent"),
+  set_prior("normal(0, 10)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:condition_positive", hb = 0),
+  set_prior("normal(0, 10)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:condition_negative", lb = 0),
+  set_prior("normal(0, 10)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:condition_neutral"),
   set_prior("student_t(5, 0, 10)", class = "sd"),
   set_prior("lkj(1.5)", class = "cor")
 )
 
-h1_formula <- bf(rt ~ congruency * prev_congruency * 
+h_cse_conditions_formula <- bf(rt ~ congruency * prev_congruency * 
               (condition_positive + condition_negative + condition_neutral) + 
-              (1 + congruency | participant_id))
-h1_fit <- brm(formula = h1_formula, data = train_df, prior = h1_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h1_model.stan"), file = file.path(model_dir, "h1"))
+              (1 + congruency + prev_congruency | participant_id))
+
+h_cse_conditions_fit <- brm(formula = h_cse_conditions_formula, data = train_df, prior = h_cse_conditions_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h_cse_conditions.stan"), file = file.path(model_dir, "h_cse_conditions"), init = 0, iter = 10000, warmup = 2000, cores =  16, file_refit = "on_change")
+```
+
+```{r monotonic trends with time}
+train_df$time_elapsed <- as.ordered(train_df$time_elapsed)
+
+h_cse_conditions_time_elapsed_priors <- c(
+  set_prior("normal(0, 60)", class = "b", coef = "congruencyincongruent"),
+  set_prior("normal(0, 30)", class = "b", coef = "prev_congruencyincongruent"),
+  set_prior("normal(0, 10)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:condition_positive", hb = 0),
+  set_prior("normal(0, 10)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:condition_negative", lb = 0),
+  set_prior("normal(0, 10)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:condition_neutral"),
+  set_prior("student_t(5, 0, 10)", class = "sd"),
+  set_prior("lkj(1.5)", class = "cor"),
+  set_prior("normal(0, 10)", class = "b", coef = "motime_elapsed"),
+  set_prior("normal(0, 5)", class = "b", coef = "motime_elapsed:condition_positive"),
+  set_prior("normal(0, 5)", class = "b", coef = "motime_elapsed:condition_negative")
+)
+
+h_cse_conditions_time_elapsed_formula <- bf(rt ~ congruency * prev_congruency * 
+              (condition_positive + condition_negative + condition_neutral) + 
+              mo(time_elapsed) * condition_positive + 
+              mo(time_elapsed) * condition_negative + 
+              (1 + congruency + prev_congruency | participant_id))
+
+h_cse_conditions_time_elapsed_fit <- brm(formula = h_cse_conditions_time_elapsed_formula, data = train_df, prior = h_cse_conditions_time_elapsed_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h_cse_conditions_time_elapsed.stan"), file = file.path(model_dir, "h_cse_conditions_time_elapsed"), init = 0, iter = 10000, warmup = 2000, cores =  16, file_refit = "on_change")
+```
+
+```{r motoric mappings model bayes}
+
+h_cse_motoric_priors <- c(
+  set_prior("normal(0, 30)", class = "b", coef = "congruencyincongruent"),
+  set_prior("normal(0, 15)", class = "b", coef = "prev_congruencyincongruent"),
+  set_prior("normal(0, 5)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:fingerindex"),
+  set_prior("normal(0, 5)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:fingermiddle"),
+  set_prior("normal(0, 5)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:reversed_color_axesTRUE"),
+  set_prior("normal(0, 5)", class = "b", coef = "congruencyincongruent:prev_congruencyincongruent:reversed_correct_responsesTRUE"),
+  set_prior("student_t(3, 0, 10)", class = "sd"),
+  set_prior("lkj(2)", class = "cor")
+)
+
+h_cse_motoric_formula <- bf(rt ~ congruency * prev_congruency +
+                      congruency * prev_congruency * reversed_color_axes +
+                      congruency * prev_congruency * reversed_correct_responses +
+                      congruency * prev_congruency * finger +
+                      (1 + congruency + prev_congruency | participant_id))
+
+h_cse_motoric_fit <- brm(formula = h_cse:motoric_formula, data = train_df, prior = h_cse_motoric_priors, seed = 1234, sample_prior = "yes", save_model = file.path(model_dir, "h_cse_motoric.stan"), file = file.path(model_dir, "h_cse_motoric"), init = 0, iter = 10000, warmup = 2000, cores =  16, file_refit = "on_change")
 ```
 
