--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -317,6 +317,8 @@ train_df <- tidy_df |>
     condition_neutral = ifelse(condition == 'neutral', 1, 0)
     ) |>
   dplyr::select(-condition)
+
+readr::write_csv("data/train_df.csv")
 ```
 # BASE MODELS & Dienes BFs based on point estimates
 ```{r freq ce model Dienes BF}
@@ -443,20 +445,26 @@ freq_cse_motoric_model <- lmer(rt ~ congruency * prev_congruency +
 cse_reversed_color_axes_summary <- summary(freq_cse_motoric_model)
 cse_reversed_color_axes_summary_coefs <- coef(cse_reversed_color_axes_summary)
 cse_reversed_color_axes_scale <- 5 # arbitrary
-cse_reversed_color_axes_mean_effect <- cse_reversed_color_axes_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_color_axes", "Estimate"]
-cse_reversed_color_axes_se_effect <- cse_reversed_color_axes_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_color_axes", "Std. Error"]
+cse_reversed_color_axes_mean_effect <- cse_reversed_color_axes_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_color_axesTRUE", "Estimate"]
+cse_reversed_color_axes_se_effect <- cse_reversed_color_axes_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_color_axesTRUE", "Std. Error"]
 
 cse_reversed_correct_responses_summary <- summary(freq_cse_motoric_model)
 cse_reversed_correct_responses_summary_coefs <- coef(cse_reversed_correct_responses_summary)
 cse_reversed_correct_responses_scale <- 5 # arbitrary
-cse_reversed_correct_responses_mean_effect <- cse_reversed_correct_responses_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_correct_responses", "Estimate"]
-cse_reversed_correct_responses_se_effect <- cse_reversed_correct_responses_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_correct_responses", "Std. Error"]
+cse_reversed_correct_responses_mean_effect <- cse_reversed_correct_responses_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_correct_responsesTRUE", "Estimate"]
+cse_reversed_correct_responses_se_effect <- cse_reversed_correct_responses_summary_coefs["congruencyincongruent:prev_congruencyincongruent:reversed_correct_responsesTRUE", "Std. Error"]
 
 cse_finger_summary <- summary(freq_cse_motoric_model)
-cse_fingersummary_coefs <- coef(cse_finger_summary)
+cse_finger_summary_coefs <- coef(cse_finger_summary)
 cse_finger_scale <- 5 # arbitrary
-cse_finger_mean_effect <- cse_finger_coefs["congruencyincongruent:prev_congruencyincongruent:finger", "Estimate"]
-cse_finger_se_effect <- cse_finger_summary_coefs["congruencyincongruent:prev_congruencyincongruent:finger", "Std. Error"]
+cse_finger_mean_effect <- cse_finger_coefs["congruencyincongruent:prev_congruencyincongruent:fingerindex", "Estimate"]
+cse_finger_se_effect <- cse_finger_summary_coefs["congruencyincongruent:prev_congruencyincongruent:fingerindex", "Std. Error"]
+
+cse_fingermiddle_summary <- summary(freq_cse_motoric_model)
+cse_fingermiddle_summary_coefs <- coef(cse_fingermiddle_summary)
+cse_fingermiddle_scale <- 5 # arbitrary
+cse_fingermiddle_mean_effect <- cse_fingermiddle_coefs["congruencyincongruent:prev_congruencyincongruent:fingermiddle", "Estimate"]
+cse_fingermiddle_se_effect <- cse_fingermiddle_summary_coefs["congruencyincongruent:prev_congruencyincongruent:fingermiddle", "Std. Error"]
 
 
 cse_reversed_color_axes_BF <- BF(sd = cse_reversed_color_axes_se_effect, obtained = - cse_reversed_color_axes_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_reversed_color_axes_scale, tail = 2)
@@ -468,6 +476,11 @@ cse_reversed_correct_responses_BF <- BF(sd = cse_reversed_correct_responses_se_e
 
 cse_reversed_correct_responses_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent", "Estimate"],by=0.01)
 cse_reversed_correct_responses_test <- BF_range(sd = cse_reversed_correct_responses_se_effect, obtained = - cse_reversed_correct_responses_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_reversed_correct_responses_range, tail = 2)
+
+cse_fingermiddle_BF <- BF(sd = cse_fingermiddle_se_effect, obtained = - cse_fingermiddle_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_fingermiddle_scale, tail = 2)
+
+cse_fingermiddle_range <- seq(from= 0,to=cse_scale * cse_summary_coefs["congruencyincongruent", "Estimate"],by=0.01)
+cse_fingermiddle_test <- BF_range(sd = cse_fingermiddle_se_effect, obtained = - cse_fingermiddle_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, sdtheoryrange = cse_fingermiddle_range, tail = 2)
 
 cse_finger_BF <- BF(sd = cse_finger_se_effect, obtained = - cse_finger_mean_effect, likelihood = "normal", modeloftheory = "normal", modeoftheory = 0, scaleoftheory = cse_finger_scale, tail = 2)
 
@@ -488,6 +501,11 @@ ev_for_cse_finger <- subset(data.frame(cse_finger_range_test), BF > 3)
 low_cse_finger_threshold <- min(ev_for_cse_finger$sdtheory)
 high_cse_finger_threshold <- max(ev_for_cse_finger$sdtheory)
 print(low_cse_finger_threshold, high_cse_finger_threshold, cse_finger_BF)
+
+ev_for_cse_fingermiddle <- subset(data.frame(cse_fingermiddle_range_test), BF > 3)
+low_cse_fingermiddle_threshold <- min(ev_for_cse_fingermiddle$sdtheory)
+high_cse_fingermiddle_threshold <- max(ev_for_cse_fingermiddle$sdtheory)
+print(low_cse_fingermiddle_threshold, high_cse_fingemiddler_threshold, cse_fingermiddle_BF)
 ```
 
 # BAYESIAN MODELS
